fix(module): add javafx.graphics requirement to module-info